# clion-opengl-template

./: CMakeLists.txt  README.md
Clion_OpenGL/include/: tgaload.h
Clion_OpenGL/src/cpp/: main.cpp
src/cpp/: tgaload.cpp
src/texture/: Clion_OpenGL
